# rust_ddd-cqrs-es

./: .gitignore  Cargo.toml
app/: Cargo.toml  Dioxus.toml  input.css
app/assets/: tailwind.css
app/src/: main.rs
app/src/components/atoms/: echo.rs  mod.rs
app/src/components/organisms/: mod.rs  navbar.rs
app/src/models/: post.rs
app/src/routes/: blog_page.rs  home_page.rs  mod.rs  not_found_page.rs  post_details_page.rs
app/src/servers/: mod.rs  posts_server.rs
bounded_context/blog/application/: Cargo.toml
bounded_context/blog/application/src/: interfaces.rs  lib.rs
bounded_context/blog/application/src/commands/: mod.rs
bounded_context/blog/application/src/commands/actions/: comment_post_command.rs  create_post_command.rs  mod.rs  publish_post_command.rs  update_post_command.rs
bounded_context/blog/application/src/commands/comment_post/: comment_post_command.rs  comment_post_command_handler.rs  mod.rs
bounded_context/blog/application/src/commands/create_post/: create_post_command.rs  create_post_command_handler.rs  mod.rs
bounded_context/blog/application/src/commands/handlers/: comment_post_command_handler.rs  create_post_command_handler.rs  mod.rs  publish_post_command_handler.rs  update_post_command_handler.rs
bounded_context/blog/application/src/commands/middlewares/: logger_middleware.rs
bounded_context/blog/application/src/commands/publish_post/: mod.rs  publish_post_command.rs  publish_post_command_handler.rs
bounded_context/blog/application/src/commands/update_post/: mod.rs  update_post_command.rs  update_post_command_handler.rs
bounded_context/blog/application/src/queries/: mod.rs
bounded_context/blog/application/src/queries/actions/: get_all_post_query.rs  get_post_query.rs  mod.rs
bounded_context/blog/application/src/queries/all_posts/: all_posts_query_handler.rs  mod.rs
bounded_context/blog/application/src/queries/get_post/: get_post_query.rs  get_post_query_handler.rs  mod.rs
bounded_context/blog/application/src/queries/handlers/: get_all_posts_query_handler.rs  get_post_query_handler.rs  mod.rs
bounded_context/blog/application/src/queries/middlewares/: logger_middleware.rs  mod.rs
bounded_context/blog/domain/: Cargo.toml
bounded_context/blog/domain/src/: aggregate_root.rs  lib.rs
bounded_context/blog/domain/src/entities/: comment.rs
bounded_context/blog/domain/src/enum/: mod.rs  post_state.rs
bounded_context/blog/domain/src/repositories/: post_repository.rs
bounded_context/blog/domain/src/value_objects/: comment_id.rs  mod.rs  post_id.rs
bounded_context/blog/infrastructure/: Cargo.toml
bounded_context/blog/infrastructure/migrations/: 20241128071157_init.down.sql  20241128071157_init.up.sql
bounded_context/blog/infrastructure/src/: lib.rs  logger.rs
bounded_context/blog/infrastructure/src/sqlx/: mod.rs
bounded_context/blog/infrastructure/src/sqlx/models/: mod.rs  post_model.rs
bounded_context/blog/infrastructure/src/sqlx/repositories/: mod.rs  sqlx_post_repository.rs
bounded_context/blog/presentation/api/: Cargo.toml
bounded_context/blog/presentation/api-graphql/: Cargo.toml
bounded_context/blog/presentation/api-graphql/src/: lib.rs  main.rs
bounded_context/blog/presentation/api-graphql/src/post_resolvers/: create_post_input.rs  mod.rs  post_object.rs
bounded_context/blog/presentation/api/src/: lib.rs  post_command_dispatcher_builder.rs  post_query_dispatcher_builder.rs
shared_kernel/: Cargo.toml
shared_kernel/src/: application.rs  domain.rs
shared_kernel/src/application/: commands.rs  queries.rs
shared_kernel/src/application/commands/: command_bus.rs  command_dispatcher.rs  mod.rs
shared_kernel/src/application/queries/: mod.rs  query_bus.rs  query_dispatcher.rs
