[workspace]
resolver = "2"
members = [
    "bounded_context/blog/application",
    "bounded_context/blog/domain",
    "bounded_context/blog/infrastructure",
    "bounded_context/blog/presentation/api", "bounded_context/blog/presentation/api-graphql",
    "shared_kernel"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Childéric <socgnachilderic@proton.me>"]

[workspace.dependencies]
dotenvy = "0.15.7"
trait-variant = "0.1.2"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }

[profile.release]
debug = true
