[workspace]
resolver = "2"
members = [
    "bounded_context/blog/application",
    "bounded_context/blog/domain",
    "bounded_context/blog/infrastructure",
    "bounded_context/blog/presentation/api",
    "bounded_context/blog/presentation/api-graphql",
    "shared_kernel",
    "app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Childéric <socgnachilderic@proton.me>"]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = { version = "0.1.83" }
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }

[profile.release]
debug = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
